[ms] update from Pootle (firefox)

--- a/ms/dom/chrome/accessibility/AccessFu.properties
+++ b/ms/dom/chrome/accessibility/AccessFu.properties
@@ -36,9 +36,32 @@ pushbutton     =       butang
 checkbutton    =       butang semak
 radiobutton    =       butang radio
 combobox       =       kekotak kombo
+progressbar    =       bar kemajuan
+slider         =       gelangsar
+spinbutton     =       butang berputar
+diagram        =       gambarajah
+animation      =       animasi
+equation       =       persamaan
+buttonmenu     =       butang menu
+whitespace     =       ruang kosong
+pagetablist    =       senarai tab
+canvas         =       kanvas
+checkmenuitem  =       item menu semak
+label          =       label
 passwordtext   =       teks kata laluan
+radiomenuitem  =       item menu radio
+textcontainer  =       bekas teks
+togglebutton   =       butang togol
+treetable      =       jadual pepohon
+header         =       pengepala
+footer         =       pekaki
+paragraph      =       perenggan
+entry          =       kemasukan
 imagemap       =       peta imej
 figure         =       rajah
+definitionlist =       senarai definisi
+term           =       syarat
+definition     =       definisi
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       ruang teks
@@ -63,6 +86,7 @@ listItemsCount =       1 bahan;#1 bahan
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
+objItemOfN      =       %1$S daripada %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -75,9 +99,11 @@ search         =       carian
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = dengan 1 lajur;dengan #1 lajur
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = dan 1 baris;dan #1 baris
 
 # table or grid cell information
 columnInfo = Kolum %S
@@ -149,9 +175,25 @@ quicknav_Table       = Jadual
 quicknav_Checkbox    = Kekotak semak
 
 # Shortened role names for braille
+menubarAbbr        =       bar menu
+scrollbarAbbr      =       bar skrol
+gripAbbr           =       genggam
+alertAbbr          =       waspada
 tableAbbr          =       tbl
+rowAbbr            =       baris
+cellAbbr           =       sel
 linkAbbr           =       Dakwat
+listAbbr           =       senarai
+listitemAbbr       =       item senarai
+outlineAbbr        =       garisan luar
+outlineitemAbbr    =       item garisan luar
+pagetabAbbr        =       tab
+propertypageAbbr   =       laman sifat
+graphicAbbr        =       grafik
 pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       butang semak
+pagetablistAbbr    =       senarai tab
+canvasAbbr         =       kanvas
 passwordtextAbbr   =       passwdtxt
 imagemapAbbr       =       imgmap
 figureAbbr         =       fig
