[th] update from Pootle (firefox)

--- a/th/toolkit/chrome/global/aboutSupport.properties
+++ b/th/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ไม่พบตัวแปรเสริม C
 adapterDescription = รายละเอียดของการ์ดแสดงผล
 adapterVendorID = รหัสผู้ผลิต
 adapterDeviceID = รหัสอุปกรณ์
+adapterSubsysID = Subsys ID
 adapterDrivers = ไดร์เวอร์ของการ์ดแสดงผล
 adapterRAM = หน่วยความจำของการ์ดแสดงผล
 driverVersion = รุ่นไดร์เวอร์
@@ -71,6 +72,7 @@ driverDate = วันที่ของไดร์เวอร์
 adapterDescription2 = รายละเอียดของการ์ดแสดงผล (GPU #2)\u0020
 adapterVendorID2 = รหัสผู้ผลิต (GPU #2)\u0020
 adapterDeviceID2 = รหัสอุปกรณ์ (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = ไดร์เวอร์ของการ์ดแสดงผล (GPU #2)
 adapterRAM2 = หน่วยความจำของการ์ดแสดงผล (GPU #2)
 driverVersion2 = รุ่นไดร์เวอร์ (GPU #2)
