--- a/th/toolkit/chrome/global/autocomplete.properties
+++ b/th/toolkit/chrome/global/autocomplete.properties
@@ -5,4 +5,5 @@
 # LOCALIZATION NOTE (searchWithEngine): %S will be replaced with
 # the search engine provider's name. This format was chosen because
 # the provider can also end with "Search" (e.g.: MSN Search).
+searchWithEngine = ค้นหาด้วย %S
 switchToTab = เปลี่ยนไปยังแท็บ
