--- a/th/toolkit/chrome/global/intl.properties
+++ b/th/toolkit/chrome/global/intl.properties
@@ -57,5 +57,5 @@ pluralRule=0
 # LOCALIZATION NOTE (intl.menuitems.alwaysappendaccesskeys, intl.menuitems.insertseparatorbeforeaccesskeys):
 # Valid values are: true, false, <empty string>
 # Missing preference or empty value equals false.
-intl.menuitems.alwaysappendaccesskeys=
+intl.menuitems.alwaysappendaccesskeys=true
 intl.menuitems.insertseparatorbeforeaccesskeys=true
