[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/preferences/preferences.properties
+++ b/xh/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Iikhuki ezilandelayo zigcinwe ekhompyutheni yakho:
 cookiesFiltered=Iikhuki ezilandelayo zingqinelana nokhangelo lwakho:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Shenxisa ingcombolo yangaphandle kweintanethi kwiwebhusayithi
 offlineAppRemovePrompt=Emva kokuyishenxisa le ngcombolo, i-%S ayisayi kufumaneka ngaphandle kweintanethi.  Uqinisekile ukuba ufuna ukuyishenxisa le webhusayithi yangaphandle kweintanethi?
 offlineAppRemoveConfirm=Shenxisa ingcombolo yangaphandle kweintanethi
