--- a/xh/browser/chrome/browser/shellservice.properties
+++ b/xh/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=&Ekukhethwa kuko kwe-%S
 safeModeLabel=&Imo Yokhuseleko ye-%S
-setDefaultBrowserTitle=Ibhrawuza esisiseko
-setDefaultBrowserMessage=I%S ayisetwanga kungokunje njengebhrawuza esisiseko. Ungathanda ukuyenza ibhrawuza esisiseko?
-setDefaultBrowserDontAsk=Yiba soloko usenza olu qwalaselo xa uqalisa i-%S.
-alreadyDefaultBrowser=I-%S seyimiselwe ibhrawuza esisiseko.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = Ekunokukhethwa kuko
+setDefaultBrowserOptions.accesskey = E
+setDefaultBrowserNever.label       = Ungaphindi undibuze
+setDefaultBrowserNever.accesskey   = U
+
+
 desktopBackgroundLeafNameWin=Okungasemva Kolwazi Oluseskrinini.bmp
 DesktopBackgroundDownloading=Kugcinwa Umfanekiso…
 DesktopBackgroundSet=Misela Okungasemva Kolwazi Oluseskrinini
