--- a/xh/webapprt/webapprt/webapp.properties
+++ b/xh/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=Fakela %S
 webapps.install.description=Uyafuna ukufakela i-%S?
 webapps.install.install=Fakela i-App
 webapps.install.dontinstall=Sukufakela
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=Intlawulo
 paymentDialog.message=Ngowuphi umboneleli wentlawulo ofuna ukumsebenzisa?
