--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -74,7 +74,6 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Umxholo omtsha ufakelwe.
 lwthemePostInstallNotification.undoButton=Qhaqha okwenzileyo
-lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Lawula imixholo…
 lwthemePostInstallNotification.manageButton.accesskey=M
 
@@ -97,6 +96,11 @@ popupBlock=Vumela okuzivelelayo kwe-%S
 popupWarningDontShowFromMessage=Musa ukubonisa lo myalezo xa kunqandiwe okuzivelelayo
 popupWarningDontShowFromLocationbar=Musa ukubonisa inkcukacha yebha xa kunqandiwe okuzivelelayo
 popupShowPopupPrefix=Bonisa i-'%S'
+
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S ithintela uqulunqo kweliphepha
+badContentBlocked.notblocked.message=%S ayithinteli ukhululo kweliphepha
 
 # missing plugin installer
 installPlugin.message = Ingaba ungathanda ukufakela izifakelo ezifunekayo ukubonisa imifanekiso ekweli phepha?
@@ -444,6 +448,10 @@ webapps.install.accesskey = I
 webapps.requestInstall = Ufuna ukufakela i"%1$S" esuka kule sayithi (%2$S)?
 webapps.install.success = Iaplikheyishini ifakelwe
 webapps.install.inprogress = Ufakelo lusaqhuba
+webapps.uninstall = Susa okuhlohliweyo
+webapps.uninstall.accesskey = U
+webapps.doNotUninstall.accesskey = D
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=I%S ngoku ikwisikrini esipheleleyo.
@@ -504,10 +512,22 @@ getUserMedia.shareMicrophone.message = Ungathanda ukwabelana ngemayikhrofowuni y
 getUserMedia.shareScreen.message = Ungathanda ukwabelana ngekhamera yakho no%S?
 getUserMedia.shareCameraAndMicrophone.message = Ungathanda ukwabelana ngekhamera nemayikhrofowuni yakho no%S?
 getUserMedia.shareScreenAndMicrophone.message = Ungathanda ukwabelana ngemayikhrofowuni yakho no%S?
+getUserMedia.selectWindow.label=Ifestile yokwabelana
+getUserMedia.selectWindow.accesskey=I
+getUserMedia.selectScreen.label=Isikrini sokwabelana
+getUserMedia.selectScreen.accesskey=I
+getUserMedia.selectApplication.label=Usetyenziso lokwabelana
+getUserMedia.selectApplication.accesskey=U
 getUserMedia.noVideo.label = Akukho Vidiyo
-getUserMedia.noWindowOrScreen.label = Akukho windowu okanye skrini
+getUserMedia.noScreen.label = Akukho Skrini
 getUserMedia.noAudio.label = Akukho Sandi
 getUserMedia.shareEntireScreen.label = Sonke iskrini
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 ifestile);#1 (#2 ifestile)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -533,13 +553,34 @@ getUserMedia.continueSharing.accesskey = Q
 getUserMedia.stopSharing.label = Yeka ukwabelana
 getUserMedia.stopSharing.accesskey = Y
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S isithintele isiqulatho esingakhuselekanga.
-mixedContentBlocked.keepBlockingButton.label = Hlala uthintele
-mixedContentBlocked.keepBlockingButton.accesskey = u
-mixedContentBlocked.unblock.label = Yenza Lungasebenzi uKhuseleko Kweli Phepha
-mixedContentBlocked.unblock.accesskey = Y
+getUserMedia.sharingMenu.label = Iitabhu zokwabelana needivayisi
+getUserMedia.sharingMenu.accesskey = d
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (ikhamera)
+getUserMedia.sharingMenuMicrophone = %S (isandisi-sandi)
+getUserMedia.sharingMenuApplication = %S (Usetyenziso)
+getUserMedia.sharingMenuScreen = %S (Iskrini)
+getUserMedia.sharingMenuWindow = %S (ifestile)
+getUserMedia.sharingMenuCameraMicrophone = %S (ikhamera nesandisi-sandi)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (ikhamera, isandisi-sandi nosetyenziso)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (ikhamera, isandisi-sandi nesikrini)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (ikhamera, isandisi-sandi nefestile)
+getUserMedia.sharingMenuMicrophoneApplication = %S (isandisi-sandi nosetyenziso)
+getUserMedia.sharingMenuMicrophoneScreen = %S (isandisi-sandi nesikrini)
+getUserMedia.sharingMenuMicrophoneWindow = (isandisi-sandi nefestile)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Izifakelo ezingaziwayo
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S ibonakala icotha… ukuba… iqalise.
