--- a/xh/browser/chrome/browser/newTab.properties
+++ b/xh/browser/chrome/browser/newTab.properties
@@ -5,6 +5,21 @@
 newtab.pin=Qhobosha le sayithi kwindawo ekuyo
 newtab.unpin=Khulula le sayithi
 newtab.block=Shenxisa le sayithi
-newtab.show=Bonisa ikhasi lethebhu elitsha
-newtab.hide=Fihla ikhasi lethebhu elitsha
-newtab.sponsored=Bonisa inkcazelo kwiithayile ekulizwe ngazo
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=Ixhaswa ngezimali
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.learn.link=Funda okungakumbi…
+newtab.privacy.link=Isaziso sabucala
