--- a/xh/browser/chrome/browser/webrtcIndicator.properties
+++ b/xh/browser/chrome/browser/webrtcIndicator.properties
@@ -26,11 +26,24 @@ webrtcIndicator.sharingMicrophoneWith.menuitem = Ukwabelana ngemayikhrofowuni ne
 webrtcIndicator.sharingScreenWith.menuitem = Ukwabelana ngeskrini ne-"%S"
 webrtcIndicator.sharingWindowWith.menuitem = Ukwabelana ngewindowu ne-"%S"
 webrtcIndicator.controlSharing.menuitem = Lawula ukwabelana
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Ukwabelana ngekhamera ne-#1 tab;Ukwabelana ngekhamera ne-#1 tabs
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Ukwabelana ngemayikhrofowuni ne-#1 tab;Ukwabelana ngemayikhrofowuni ne-#1 tabs
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Ukwabelana ngeskrini ne-#1 tab;Ukwabelana ngeskrini ne-#1 tabs
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Ukwabelana ngewindowu ne-#1 tab;Ukwabelana ngewindowu ne-#1 tabs
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
