--- a/xh/dom/chrome/accessibility/AccessFu.properties
+++ b/xh/dom/chrome/accessibility/AccessFu.properties
@@ -7,72 +7,12 @@ screenReaderStarted = Isifundi-sikrini siqalisiwe
 screenReaderStopped = Isifundi-sikrini simisiwe
 
 # Roles
-menubar        =       ibha yemenyu
-scrollbar      =       ibha yokuhambahamba kokubhaliweyo
-grip           =       igriphu
-alert          =       lumka
-menupopup      =       imenyu ezivelelayo
-document       =       uxwebhu
-pane           =       ipheyini
-dialog         =       idayalogu
-separator      =       isihlukanisi
-toolbar        =       ithulbha
-statusbar      =       ibha yobume
 table          =       itafile
-columnheader   =       isintloko sekholam
-rowheader      =       isintloko serowu
-column         =       ikholam
-row            =       irowu
-cell           =       iseli
 link           =       ikhonkco
-list           =       uluhlu
-listitem       =       dwelisa into
-outline        =       isishwankathelo
-outlineitem    =       iayithem yesishwankathelo
-pagetab        =       ithebhu
-propertypage   =       iphepha lepropati
-graphic        =       igrafikhi
 pushbutton     =       iqhosha
-checkbutton    =       iqhosha lokukhangela
-radiobutton    =       iqhosha likanomathotholo
-combobox       =       ibhokisi yekhombo
-progressbar    =       ibha yenkqubela
-slider         =       isilayida
-spinbutton     =       iqhosha lokuspina
-diagram        =       idayagram
-animation      =       uhombiso
-equation       =       ulingano
-buttonmenu     =       imenyu yeqhosha
-whitespace     =       indawo emhlophe
-pagetablist    =       uluhlu lwethebhu
-canvas         =       ikhanvasi
-checkmenuitem  =       khangela iayithem yemenyu
-label          =       ileyibhile
 passwordtext   =       umbhalo wepasiwedi
-radiomenuitem  =       iayithem yemenyu kanomathotholo
-textcontainer  =       ikhonteyina yombhalo
-togglebutton   =       iqhosha elilayita licime kwikhibhodi
-treetable      =       itheyibhile yomthi
-header         =       isintloko
-footer         =       umbhalo osemazantsi ephepha
-paragraph      =       umhlathi
-entry          =       ufakelo
-caption        =       ikhepshini
-heading        =       umxholo
-section        =       icandelo
-form           =       ifomu
-comboboxlist   =       uludwe lweebhokisi zekhombo
-comboboxoption =       ongakhetha kuko kwibhokisi yekhombo
 imagemap       =       imephu yomfanekiso
-listboxoption  =       ukhetho
-listbox        =       ibhokisi yoludwe
-flatequation   =       ulingano olusicaba
-gridcell       =       iseli yegridi
-note           =       inqaku
 figure         =       inani
-definitionlist =       uluhlu lwenkcazelo
-term           =       igama
-definition     =       inkcaza
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       indawo yombhalo
@@ -94,11 +34,9 @@ listEnd        =       Into yokugqibela
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 iayithem;#1 ii-ayithem
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       I-%1$S %2$S ye-%3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
 
 # Landmark announcements
 banner         =       ibhena
@@ -108,17 +46,12 @@ main           =       phambili
 navigation     =       ufuniselo
 search         =       khangela
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = I-%S ne-%S kunye ne-%S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 ikholam;#1 iikholam
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 irowu;#1 iirowu
 
 # table or grid cell information
 columnInfo = Ikholam %S
@@ -190,18 +123,21 @@ quicknav_Table       = Iitafile
 quicknav_Checkbox    = Khangela iibhokisi
 
 # Shortened role names for braille
+tableAbbr          =       tbl
 linkAbbr           =       l-inki
 pushbuttonAbbr     =       i-btn
 passwordtextAbbr   =       i-passwdtxt
 imagemapAbbr       =       imgmaphu
 figureAbbr         =       inani
 textareaAbbr       =       i-txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
