[es-MX] update from Pootle (mobile)

--- a/es-MX/mobile/android/chrome/browser.properties
+++ b/es-MX/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Instalar
 
 # Alerts
 alertAddonsDownloading=Downloading add-on
-alertAddonsInstalledNoRestart=Installation complete
 alertAddonsFail=Installation failed
+alertAddonsInstalledNoRestart.message=Installation complete
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ADD-ONS
 
 alertDownloadsStart2=Download starting
 alertDownloadsDone2=Download complete
@@ -19,6 +23,9 @@ alertDownloadsToast=Download started…
 alertDownloadsPause=Pause
 alertDownloadsResume=Reanudar
 alertDownloadsCancel=Cancelar
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Las descargas están deshabilitadas para las sesiones de invitado
 
 alertFullScreenToast=Press BACK to leave full-screen mode
 
@@ -116,6 +123,35 @@ contacts.ask=¿Permitir que %S acceda a tus contactos?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=No volver a preguntar por este sitio
 
+# Device Storage API
+deviceStorageMusic.allow=Permitir
+deviceStorageMusic.dontAllow=No permitir
+deviceStorageMusic.ask=¿Permitir que %S acceda a tu música?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=No preguntar de nuevo por este sitio
+
+deviceStoragePictures.allow=Permitir
+deviceStoragePictures.dontAllow=No permitir
+deviceStoragePictures.ask=¿Permitir que %S acceda a tus imágenes?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=No preguntar de nuevo para este sitio
+
+deviceStorageSdcard.allow=Permitir
+deviceStorageSdcard.dontAllow=No permitir
+deviceStorageSdcard.ask=¿Permitir que %S acceda a almacenamiento externo?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=No preguntar de nuevo para este sitio
+
+deviceStorageVideos.allow=Permitir
+deviceStorageVideos.dontAllow=No permitir
+deviceStorageVideos.ask=¿Permitir que %S acceda a tus videos?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=No preguntar de nuevo por este sitio
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=falso
 selectionHelper.textCopied=Text copied to clipboard
 
 # Casting
-casting.prompt=Asimilar a dispositivo
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Enviar al dispositivo
+casting.mirrorTab=Reflejar pestaña
+casting.mirrorTabStop=Dejar de reflejar
 
 # Context menu
 contextmenu.openInNewTab=Open Link in New Tab
@@ -209,7 +249,9 @@ contextmenu.unmute=Desilenciar
 contextmenu.saveVideo=Guardar video
 contextmenu.saveAudio=Guardar audio
 contextmenu.addToContacts=Añadir a Contactos
-contextmenu.castToScreen=Asimilar a pantalla
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Enviar al dispositivo
 
 contextmenu.copy=Copiar
 contextmenu.cut=Cortar
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Correo
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Elegir la fuente
 feedHandler.subscribeWith=Subscribirse con\u0020
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S está desaprobado. Por favor, usa %S en lugar
