--- a/es-MX/mobile/android/chrome/webapp.properties
+++ b/es-MX/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 actualización fallida;#1 actualizaciones fallidas
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Falló al recuperar la actualización para %1$S;Falló para recuperar las actualizaciones para %1$S
+
+webappsDisabledInGuest=Instalar aplicaciones no está habilitado en las sesiones de invitado
