[xh] update from Pootle (mobile)

--- a/xh/mobile/android/chrome/browser.properties
+++ b/xh/mobile/android/chrome/browser.properties
@@ -7,8 +7,11 @@ addonsConfirmInstall.install=Fakela
 
 # Alerts
 alertAddonsDownloading=Ikhuphela isongezelelo
-alertAddonsInstalledNoRestart=Ukufakelwa kugqityiwe
 alertAddonsFail=Ukufakelwa akuphumelelanga
+alertAddonsInstalledNoRestart.message=Ukufakelwa kugqityiwe
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
 
 alertDownloadsStart2=Iqalisa ukukhuphela
 alertDownloadsDone2=Igqibile ukukhuphela
@@ -19,6 +22,8 @@ alertDownloadsToast=Ukukhuphela kuqalisiwe…
 alertDownloadsPause=Nqumama
 alertDownloadsResume=Buyela enkomeni
 alertDownloadsCancel=Rhoxisa
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
 
 alertFullScreenToast=Cinezela NGASEMVA ukushiya imo yesikrin esipheleleyo
 
@@ -116,6 +121,19 @@ contacts.ask=Ingaba imele ivumele %S ukuba ifikelele kwabo unoqhagamshelwano nab
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Ungabuzi kwakhona kule sayithi
 
+# Device Storage API
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +193,8 @@ browser.menu.showCharacterEncoding=asiyonyaniso
 selectionHelper.textCopied=Umbhalo ukhutshelwe kwiklipbhodi
 
 # Casting
-casting.prompt=Lahlela isixhobo
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
 
 # Context menu
 contextmenu.openInNewTab=Vula iKhonkco kwiThebhu Entsha
@@ -209,7 +228,8 @@ contextmenu.unmute=Vuselela isandi
 contextmenu.saveVideo=Gcina ividiyo
 contextmenu.saveAudio=Gcina okunesandi
 contextmenu.addToContacts=Yongeza kubantu oqhagamshelana nabo
-contextmenu.castToScreen=Lahlela kwiskrini
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
 
 contextmenu.copy=Kopa
 contextmenu.cut=Sika
@@ -341,3 +361,8 @@ browser.menu.context.mailto = Imeyile
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Khetha ifidi
 feedHandler.subscribeWith=Rhuma nge
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
