[xh] update from Pootle (firefox)

--- a/xh/dom/chrome/accessibility/AccessFu.properties
+++ b/xh/dom/chrome/accessibility/AccessFu.properties
@@ -49,9 +49,11 @@ search         =       khangela
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = no 1 ikholam: kunye #1 iikholam
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = kunye 1 umqolo; kunye #1 imiqolo
 
 # table or grid cell information
 columnInfo = Ikholam %S
@@ -141,3 +143,7 @@ tblColumnInfoAbbr = #1c;#1c
 tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
 
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
