--- a/xh/browser/chrome/browser/lightweightThemes.properties
+++ b/xh/browser/chrome/browser/lightweightThemes.properties
@@ -2,7 +2,14 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+lightweightThemes.recommended-1.name=I-Web Browser Renaissance
+lightweightThemes.recommended-1.description=I-Web Browser Renaissance yi (C) Sean.Martell. Ifumaneka phantsi CC-BY-SA. Akukho waranti.
 
+lightweightThemes.recommended-2.name=I-Space Fantasy
+lightweightThemes.recommended-2.description=I-Space Fantasy yi (C) fx5800p. Ifumaneka phantsi CC-BY-SA. Akukho waranti.
 
+lightweightThemes.recommended-3.name=I-Linen Light
+lightweightThemes.recommended-3.description=I-Linen Light yi (C) DVemer. Ifumaneka phantsi ko- CC-BY-SA. Akukho waranti.
 
+lightweightThemes.recommended-4.name=I-Pastel Grandient
 
