--- a/xh/browser/chrome/browser/newTab.properties
+++ b/xh/browser/chrome/browser/newTab.properties
@@ -12,9 +12,11 @@ newtab.sponsored.button=Ixhaswa ngezimali
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
+newtab.sponsored.explain=Esi sihloko siboniswayo  kuwe egameni lomlingane kaMozilla. Ungasisusa naninina ngokucofa iqhosha %S$S. %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Umlingane kaMozilla uyiphucule ngembonakalo lethayile, endaweni yesikrinishoti. Ungacima iithayile eziphuculweyo ngokucofa iqhosha i %1$S ngokuzikhethela. %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
