--- a/xh/browser/chrome/browser/shellservice.properties
+++ b/xh/browser/chrome/browser/shellservice.properties
@@ -7,6 +7,9 @@ safeModeLabel=&Imo Yokhuseleko ye-%S
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Fumana konke okufumanekayo ku %S ngokuyiseta kwibhrawuza yakho yesiseko
+setDefaultBrowserConfirm.label     = Sebenzisa %S njengebhrawuza yam yesiseko
+setDefaultBrowserConfirm.accesskey = S
 setDefaultBrowserOptions.label     = Ekunokukhethwa kuko
 setDefaultBrowserOptions.accesskey = E
 setDefaultBrowserNever.label       = Ungaphindi undibuze
