Bug 1064282 - Scratchpad should have statusbar like Page Source viewer

--- a/sk/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sk/browser/chrome/browser/devtools/scratchpad.properties
@@ -78,6 +78,11 @@ browserContext.notification=Tento editor beží v kontexte prehliadača.
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
 
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Riadok %1$S, stĺpec %2$S
+
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
 fileNoLongerExists.notification=Tento súbor už viac neexistuje.
