Shorten inspector label to make it fit in DevTools window

--- a/sk/browser/chrome/browser/devtools/inspector.properties
+++ b/sk/browser/chrome/browser/devtools/inspector.properties
@@ -33,7 +33,7 @@ nodeMenu.tooltiptext=Operácie nad uzlom
 
 # LOCALIZATION NOTE (inspector.*)
 # Used for the menuitem in the tool menu
-inspector.label=Prieskumník stránok
+inspector.label=Prieskumník
 inspector.commandkey=C
 inspector.accesskey=k
 
