Update all: Fix term "Address" usage

--- a/zh-TW/browser/chrome/browser/loop/loop.properties
+++ b/zh-TW/browser/chrome/browser/loop/loop.properties
@@ -173,7 +173,7 @@ video_call_menu_button=視訊通話
 initiate_call_button_label2=準備好要開始通話了嗎？
 incoming_call_title2=通話請求
 incoming_call_accept_button=接受
-incoming_call_accept_audio_only_tooltip=只進行語音通話
+incoming_call_accept_audio_only_tooltip=進行語音通話
 incoming_call_cancel_button=取消
 incoming_call_cancel_and_block_button=取消並封鎖
 incoming_call_block_button=封鎖
