--- a/zh-TW/browser/chrome/browser/syncSetup.properties
+++ b/zh-TW/browser/chrome/browser/syncSetup.properties
@@ -6,7 +6,7 @@ button.syncOptions.label       = 同步選項
 button.syncOptionsDone.label   = 完成
 button.syncOptionsCancel.label = 取消
 
-invalidEmail.label          = 無效的電子郵件位址
+invalidEmail.label          = 無效的電子郵件地址
 serverInvalid.label         = 請輸入一個有效的伺服器網址
 usernameNotAvailable.label  = 正在使用中
 
