--- a/zh-TW/dom/chrome/layout/xmlparser.properties
+++ b/zh-TW/dom/chrome/layout/xmlparser.properties
@@ -41,7 +41,7 @@
 # %2$S is replaced by URL
 # %3$u is replaced by line number
 # %4$u is replaced by column number
-XMLParsingError = XML 解析錯誤: %1$S\n位址: %2$S\n行號 %3$u, 第 %4$u 個字:
+XMLParsingError = XML 解析錯誤: %1$S\n位置: %2$S\n行號 %3$u, 第 %4$u 個字:
 
 # %S is replaced by a tag name.
 # This gets appended to the error string if the error is mismatched tag.
