--- a/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
+++ b/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
@@ -214,7 +214,7 @@ SEC_ERROR_PKCS12_DUPLICATE_DATA=未匯入，資料庫已有資料。
 SEC_ERROR_MESSAGE_SEND_ABORTED=訊息未送出。
 SEC_ERROR_INADEQUATE_KEY_USAGE=試圖操作的憑證金鑰用法不正確。
 SEC_ERROR_INADEQUATE_CERT_TYPE=程式的憑證類型未被核准。
-SEC_ERROR_CERT_ADDR_MISMATCH=簽署憑證的位址與訊息標頭中的位址不符。
+SEC_ERROR_CERT_ADDR_MISMATCH=簽署憑證的位置與訊息標頭中的位置不符。
 SEC_ERROR_PKCS12_UNABLE_TO_IMPORT_KEY=無法匯入，試圖匯入私密金鑰時錯誤。
 SEC_ERROR_PKCS12_IMPORTING_CERT_CHAIN=無法匯入，嘗試匯入憑證鏈時錯誤。
 SEC_ERROR_PKCS12_UNABLE_TO_LOCATE_OBJECT_BY_NAME=無法匯出，無法依暱稱定位憑證或金鑰。
