--- a/zh-TW/security/manager/chrome/pipnss/pipnss.properties
+++ b/zh-TW/security/manager/chrome/pipnss/pipnss.properties
@@ -161,11 +161,11 @@ CertDumpMSDomainGUID=Microsoft 網域 GUID
 CertDumpEKU_2_16_840_1_113730_4_1=Netscape 伺服器閘道加密 (SGC)
 CertDumpRFC822Name=E-Mail 地址
 CertDumpDNSName=DNS 名稱
-CertDumpX400Address=X.400 位址
+CertDumpX400Address=X.400 位置
 CertDumpDirectoryName=X.500 名稱
 CertDumpEDIPartyName=EDI Party 名稱
 CertDumpURI=網址
-CertDumpIPAddress=IP 位址
+CertDumpIPAddress=IP 位置
 CertDumpRegisterID=已註冊 OID
 CertDumpKeyID=金鑰 ID
 CertDumpVerisignNotices=Verisign 使用者通知
