--- a/zh-TW/toolkit/chrome/autoconfig/autoconfig.properties
+++ b/zh-TW/toolkit/chrome/autoconfig/autoconfig.properties
@@ -8,6 +8,6 @@ readConfigMsg = 無法讀取設定檔。請告知您的系統管理員。
 autoConfigTitle = 自動設定 (AutoConfig) 警告
 autoConfigMsg = Netscape.cfg/AutoConfig 失敗。請通知系統管理員。 \n 錯誤:%S 失敗:
 
-emailPromptTitle = Email 位址
+emailPromptTitle = Email 地址
 emailPromptMsg = 輸入您的 Email
 
