--- a/zh-TW/mobile/overrides/appstrings.properties
+++ b/zh-TW/mobile/overrides/appstrings.properties
@@ -5,7 +5,7 @@
 malformedURI=網址不正確，無法載入。
 fileNotFound=Firefox 找不到檔案 %S。
 dnsNotFound=Firefox 找不到伺服器 %S。
-unknownProtocolFound=Firefox 不知道如何開啟此位址，因為下列通訊協定當中的某個通訊協定 (%S) 未與任何程式關聯，或不允許在此環境中使用。
+unknownProtocolFound=Firefox 不知道如何開啟此網址，因為下列通訊協定當中的某個通訊協定 (%S) 未與任何程式關聯，或不被允許在此環境中使用。
 connectionFailure=Firefox 無法與伺服器 %S 建立連線。
 netInterrupt=載入頁面時與 %S 的連線中斷。
 netTimeout=伺服器 %S 花了太久時間還是無回應。
