--- a/zh-TW/suite/chrome/common/utilityOverlay.properties
+++ b/zh-TW/suite/chrome/common/utilityOverlay.properties
@@ -5,7 +5,7 @@
 # Online/offline tooltips
 onlineTooltip0=您正在線上（不使用代理伺服器）。點一下圖示以離線。
 onlineTooltip1=您正在線上（手動設定代理伺服器）。點一下圖示以離線。
-onlineTooltip2=您正在線上（自動設定代理伺服器位址）。點一下圖示以離線。
+onlineTooltip2=您正在線上（自動設定代理伺服器位置）。點一下圖示以離線。
 onlineTooltip4=您正在線上（自動搜尋代理伺服器）。點一下圖示以離線。
 onlineTooltip5=您正在線上（使用系統設定的代理伺服器）。點一下圖示以離線。
 offlineTooltip=您正在離線模式當中。請按圖示以連線。
