--- a/zh-TW/suite/chrome/mailnews/importMsgs.properties
+++ b/zh-TW/suite/chrome/mailnews/importMsgs.properties
@@ -275,9 +275,9 @@ ImportAddressBadModule=無法載入通訊錄匯入模組
 ImportAddressNotFound=找不到可匯入的通訊錄。請確定您已正確安裝好所選取的程式或格式。
 ImportEmptyAddressBook=無法匯入空的通訊錄 %S。
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportAddressFailed=無法從 %S 匯入位址。
+ImportAddressFailed=無法從 %S 匯入地址。
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportAddressSuccess=已成功從 %S 匯入位址。
+ImportAddressSuccess=已成功從 %S 匯入地址。
 
 # Error string for filters import
 ImportFiltersBadModule=無法載入篩選器匯入模組。
