--- a/zh-TW/webapprt/webapprt/overrides/appstrings.properties
+++ b/zh-TW/webapprt/webapprt/overrides/appstrings.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 malformedURI=網址不正確，無法載入。
-fileNotFound=找不到檔案 %S。請確定位址正確後再重試。
+fileNotFound=找不到檔案 %S。請確定位置正確後再試一次。
 dnsNotFound=找不到 %S。請檢查並確定名稱正確。
 unknownProtocolFound=某個下列的通訊協定 %S 不是已註冊的通訊協定，或不允許在此環境中使用。
 connectionFailure=嘗試連線到 %S 時被拒絕。
