Verander niet-ingebed in extern in SeaMonkey

--- a/nl/suite/chrome/mailnews/messenger.properties
+++ b/nl/suite/chrome/mailnews/messenger.properties
@@ -403,7 +403,7 @@ confirmPhishingUrl1=%1$S denkt dat deze website verdacht is! Mogelijk probeert d
 confirmPhishingUrl2=%1$S denkt dat deze website verdacht is! Mogelijk probeert deze zich voor te doen als de webpagina die u wilt bezoeken. Weet u zeker dat u %2$S wilt bezoeken?
 
 #LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
-alwaysLoadRemoteContentForSender=Klik hier om niet-ingebedde afbeeldingen van %1$S altijd te laden.
+alwaysLoadRemoteContentForSender=Klik hier om externe afbeeldingen van %1$S altijd te laden.
 
 #LOCALIZATION NOTE(mdnBarMessageNormal) %1$S is the name of the sender
 mdnBarMessageNormal=%1$S heeft om een leesbevestiging gevraagd.
@@ -454,8 +454,8 @@ junkBarButtonKey=G
 junkBarInfoButton=?
 junkBarInfoButtonKey=?
 # LOCALIZATION NOTE (remoteContentBarMessage): %S is the brandname
-remoteContentBarMessage=Om uw privacy te beschermen heeft %S  niet-ingebedde inhoud in dit bericht geblokkeerd.
-remoteContentBarButton=Niet-ingebedde inhoud tonen
+remoteContentBarMessage=Om uw privacy te beschermen heeft %S externe inhoud in dit bericht geblokkeerd.
+remoteContentBarButton=Externe inhoud tonen
 remoteContentBarButtonKey=t
 # LOCALIZATION NOTE (phishingBarMessage): %S is the brandname
 phishingBarMessage=%S beschouwd dit bericht als een e-mailscam.
