appstrings.properties URL

--- a/uk/mobile/overrides/appstrings.properties
+++ b/uk/mobile/overrides/appstrings.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-malformedURI=URL недійсна і її неможливо завантажити.
+malformedURI=URL недійсний і його неможливо завантажити.
 fileNotFound=Firefox не може знайти файл %S.
 dnsNotFound=Firefox не може знайти сервер %S.
 unknownProtocolFound=Firefox не знає як відкрити цю адресу, оскільки жоден з наступних протоколів (%S) не пов’язаний з якоюсь програмою, або не дозволений в цьому контексті.
