custom.properties розташування

--- a/uk/browser/installer/custom.properties
+++ b/uk/browser/installer/custom.properties
@@ -31,7 +31,7 @@ OPTIONAL_COMPONENTS_DESC=Служба оновлення дозволить ва
 MAINTENANCE_SERVICE_CHECKBOX_DESC=Встановити Службу &Оновлення
 SUMMARY_PAGE_TITLE=Підсумок
 SUMMARY_PAGE_SUBTITLE=Все готово до початку встановлення $BrandShortName
-SUMMARY_INSTALLED_TO=$BrandShortName буде встановлено у наступне розташування:
+SUMMARY_INSTALLED_TO=$BrandShortName буде встановлено у наступне місце:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Для завершення встановлення можливо знадобиться перезавантажити комп’ютер.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Для завершення вилучення можливо знадобиться перезавантажити комп’ютер.
 SUMMARY_TAKE_DEFAULTS=Ви&користовувати $BrandShortName як мій типовий браузер
