[S] loop: Bug 1069965: add a visual separator between available and blocked contacts

--- a/it/browser/chrome/browser/loop/loop.properties
+++ b/it/browser/chrome/browser/loop/loop.properties
@@ -35,6 +35,7 @@ contacts_search_placesholder = Cerca…
 new_contact_button = Nuovo contatto
 new_contact_name_placeholder = Nome
 new_contact_email_placeholder = Email
+contacts_blocked_contacts = Contatti bloccati
 add_contact_button = Aggiungi contatto
 valid_email_text_description = Inserire un indirizzo email valido
 add_or_import_contact_title = Aggiungi o importa contatto
