--- a/sk/toolkit/chrome/global/autocomplete.properties
+++ b/sk/toolkit/chrome/global/autocomplete.properties
@@ -7,3 +7,6 @@
 # the provider can also end with "Search" (e.g.: MSN Search).
 searchWithEngine = Vyhľadať pomocou %S
 switchToTab = Prejsť na kartu
+# LOCALIZATION NOTE (visitURL):
+# %S is the URL to visit.
+visitURL = Navštíviť %S
