Bug 1069965: add a visual separator between available and blocked contacts

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -95,6 +95,8 @@ add_contact_button=Pridať kontakt
 ### contact.
 valid_email_text_description=Zadajte platnú e-mailovú adresu
 
+contacts_blocked_contacts=Zablokované kontakty
+
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 add_or_import_contact_title=Pridanie alebo import kontaktu
