--- a/sk/browser/chrome/browser/places/places.properties
+++ b/sk/browser/chrome/browser/places/places.properties
@@ -75,21 +75,15 @@ OrganizerQueryDownloads=Prevzaté súbory
 OrganizerQueryAllBookmarks=Všetky záložky
 OrganizerQueryTags=Značky
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
 # See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Značka
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml
 bookmarkResultLabel=Záložka
-# LOCALIZATION NOTE (switchtabResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml
 switchtabResultLabel=Karta
+keywordResultLabel=Kľúčové slovo
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
