[S] browser: Bug 1066358 - Improve how keyword autocomplete results are displayed

--- a/it/browser/chrome/browser/places/places.properties
+++ b/it/browser/chrome/browser/places/places.properties
@@ -56,6 +56,7 @@ OrganizerQueryTags = Etichette
 tagResultLabel = Etichetta
 bookmarkResultLabel = Segnalibro
 switchtabResultLabel = Scheda
+keywordResultLabel = Parola chiave
 lockPrompt.title = Errore avvio browser
 lockPrompt.text = I segnalibri e la cronologia non potranno funzionare correttamente in quanto un file di %S risulta utilizzato da un’altra applicazione. Il problema potrebbe essere causato da un software di sicurezza.
 lockPromptInfoButton.label = Ulteriori informazioni
