--- a/uk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/uk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,5 +97,5 @@ quit-button.tooltiptext.linux2 = Закрити %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Закрити %1$S (%2$S)
 
-loop-call-button.label = Invite someone to talk
-loop-call-button.tooltiptext = Invite someone to talk
+loop-call-button.label = Запросити когось на бесіду
+loop-call-button.tooltiptext = Запросити когось на бесіду
