--- a/nl/dom/chrome/accessibility/AccessFu.properties
+++ b/nl/dom/chrome/accessibility/AccessFu.properties
@@ -2,7 +2,6 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
-
 # Screen reader started/stopped
 screenReaderStarted = Schermlezer gestart 
 screenReaderStopped = Schermlezer gestopt
@@ -109,7 +108,7 @@ navigation     =       navigatie
 search         =       zoeken
 
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
-# Number of columns within the table
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 tblColumnInfo = met 1 kolom;met #1 kolommen
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
