--- a/nl/dom/chrome/layout/css.properties
+++ b/nl/dom/chrome/layout/css.properties
@@ -46,14 +46,14 @@ PESelectorListExtraEOF=‘,’ of ‘{’
 PESelectorListExtra=‘%1$S’ gevonden waar ‘,’ of ‘{’ verwacht.
 PESelectorGroupNoSelector=Selector verwacht.
 PESelectorGroupExtraCombinator=Overblijvende combinator.
-PECounterStyleNotIdent=Identificator voor naam van @counter-stijl-regel verwacht.
-PECounterStyleBadName=Naam van @counter-stijl-regel kan niet ‘%1$S’ zijn.
-PECounterStyleBadBlockStart=‘%1$S’ gevonden waar ‘{’ om de @counter-stijl-regel te starten verwacht.
-PECounterStyleEOF=‘}’ afsluiting van @counter-stijlblok
+PECounterStyleNotIdent=Identificator voor naam van @counter-stijlregel verwacht.
+PECounterStyleBadName=Naam van @counter-stijlregel kan niet ‘%1$S’ zijn.
+PECounterStyleBadBlockStart=‘%1$S’ gevonden waar ‘{’ om de @counter-stijlregel te starten verwacht.
+PECounterStyleEOF=Sluit-‘}’ van @counter-stijlblok
 PECounterDescExpected=‘%1$S’ gevonden waar counter descriptor verwacht.
-PEUnknownCounterDesc=Onbekende descriptor ‘%1$S’ in @counter-stijl-regel.
+PEUnknownCounterDesc=Onbekende descriptor ‘%1$S’ in @counter-stijlregel.
 PECounterExtendsNotIdent=‘%1$S’ gevonden waar identificator voor extends-systeem verwacht.
-PECounterASWeight=Elk gewicht in de additive-symbols descriptor moet kleiner zijn als de voorgaande.
+PECounterASWeight=Elk gewicht in de additive-symbols-descriptor moet kleiner zijn dan het voorgaande gewicht.
 PEClassSelEOF=klassenaam
 PEClassSelNotIdent=‘%1$S’ gevonden waar identificator voor klasseselector verwacht.
 PETypeSelEOF=elementtype
