--- a/nl/dom/chrome/plugins.properties
+++ b/nl/dom/chrome/plugins.properties
@@ -20,5 +20,5 @@ mimetype_label=MIME-type
 description_label=Beschrijving
 suffixes_label=Achtervoegsels
 
-openH264_name=OpenH264 Video Codec aangeboden door Cisco Systems, Inc.
+openH264_name=OpenH264-videocodec aangeboden door Cisco Systems, Inc.
 openH264_description=Webvideo afspelen en videochats gebruiken.
