--- a/nl/webapprt/webapprt/overrides/dom.properties
+++ b/nl/webapprt/webapprt/overrides/dom.properties
@@ -30,9 +30,9 @@ FormValidationFileMissing=Selecteer een bestand.
 FormValidationSelectMissing=Selecteer een item in de lijst.
 FormValidationInvalidEmail=Voer een e-mailadres in.
 FormValidationInvalidURL=Voer een URL in.
-FormValidationPatternMismatch=Gebruik de verzochte opmaak.
+FormValidationPatternMismatch=Gebruik de gevraagde indeling.
 # LOCALIZATION NOTE (FormValidationPatternMismatchWithTitle): %S is the (possibly truncated) title attribute value.
-FormValidationPatternMismatchWithTitle=Gebruik de verzochte opmaak: %S.
+FormValidationPatternMismatchWithTitle=Gebruik de gevraagde indeling: %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeOverflow): %S is a number.
 FormValidationNumberRangeOverflow=Selecteer een waarde die niet hoger is dan %S.
 # LOCALIZATION NOTE (FormValidationDateRangeOverflow): %S is a date.
@@ -42,7 +42,7 @@ FormValidationTimeRangeOverflow=Selecteer een waarde die niet eerder is dan %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
 FormValidationNumberRangeUnderflow=Selecteer een waarde die niet lager is dan %S.
 # LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
-FormValidationDateRangeUnderflow=Selecteer een waarde die is niet later is dan %S.
+FormValidationDateRangeUnderflow=Selecteer een waarde die niet later is dan %S.
 # LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
 FormValidationTimeRangeUnderflow=Selecteer een waarde die niet later is dan %S.
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
