--- a/nl/toolkit/chrome/global/autocomplete.properties
+++ b/nl/toolkit/chrome/global/autocomplete.properties
@@ -5,5 +5,5 @@
 # LOCALIZATION NOTE (searchWithEngine): %S will be replaced with
 # the search engine provider's name. This format was chosen because
 # the provider can also end with "Search" (e.g.: MSN Search).
-searchWithEngine = Met %S zoeken
+searchWithEngine = Zoeken met %S
 switchToTab = Wisselen naar tabblad
