--- a/nl/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/nl/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -57,7 +57,7 @@ notification.installError=Er is een fout opgetreden bij het installeren van %1$S
 notification.installError.retry=Opnieuw proberen
 notification.installError.retry.tooltip=Downloaden en installeren van deze add-on opnieuw proberen
 #LOCALIZATION NOTE (notification.openH264Pending) OpenH264 will be automatically installed later.
-notification.openH264Pending=Zal binnenkort worden geïnstalleerd.
+notification.openH264Pending=Zal straks worden geïnstalleerd.
 
 #LOCALIZATION NOTE (contributionAmount2) %S is the currency amount recommended for contributions
 contributionAmount2=Voorgestelde bijdrage: %S
@@ -100,7 +100,7 @@ details.notification.uninstall=%1$S zal worden gede-installeerd nadat u %2$S her
 #LOCALIZATION NOTE (details.notification.upgrade) %1$S is the add-on name, %2$S is brand name
 details.notification.upgrade=%1$S zal worden bijgewerkt nadat u %2$S herstart.
 #LOCALIZATION NOTE (details.notification.openH264Pending) OpenH264 will be automatically installed later.
-details.notification.openH264Pending=Zal binnenkort worden geïnstalleerd.
+details.notification.openH264Pending=Zal straks worden geïnstalleerd.
 
 # LOCALIZATION NOTE (details.experiment.time.daysRemaining):
 # Semicolon-separated list of plural forms.
@@ -108,14 +108,14 @@ details.notification.openH264Pending=Zal binnenkort worden geïnstalleerd.
 # #1 is the number of days from now that the experiment will remain active (detail view).
 details.experiment.time.daysRemaining=#1 dag resterend;#1 dagen resterend
 #LOCALIZATION NOTE (details.experiment.time.endsToday) The experiment will end in less than a day (detail view).
-details.experiment.time.endsToday=Minder als een dag resterend
+details.experiment.time.endsToday=Minder dan een dag resterend
 # LOCALIZATION NOTE (details.experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (detail view).
 details.experiment.time.daysPassed=#1 dag geleden;#1 dagen geleden
 #LOCALIZATION NOTE (details.experiment.time.endedToday) The experiment ended less than a day ago (detail view).
-details.experiment.time.endedToday=Minder als een dag geleden
+details.experiment.time.endedToday=Minder dan een dag geleden
 #LOCALIZATION NOTE (details.experiment.state.active) This experiment is active (detail view).
 details.experiment.state.active=Actief
 #LOCALIZATION NOTE (details.experiment.state.complete) This experiment is complete (it was previously active) (detail view).
@@ -127,14 +127,14 @@ details.experiment.state.complete=Voltooid
 # #1 is the number of days from now that the experiment will remain active (list view item).
 experiment.time.daysRemaining=#1 dag resterend;#1 dagen resterend
 #LOCALIZATION NOTE (experiment.time.endsToday) The experiment will end in less than a day (list view item).
-experiment.time.endsToday=Minder als een dag resterend
+experiment.time.endsToday=Minder dan een dag resterend
 # LOCALIZATION NOTE (experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (list view item).
 experiment.time.daysPassed=#1 dag geleden;#1 dagen geleden
 #LOCALIZATION NOTE (experiment.time.endedToday) The experiment ended less than a day ago (list view item).
-experiment.time.endedToday=Minder als een dag geleden
+experiment.time.endedToday=Minder dan een dag geleden
 #LOCALIZATION NOTE (experiment.state.active) This experiment is active (list view item).
 experiment.state.active=Actief
 #LOCALIZATION NOTE (experiment.state.complete) This experiment is complete (it was previously active) (list view item).
