[xh] update from Pootle (mobile)

--- a/xh/mobile/android/chrome/browser.properties
+++ b/xh/mobile/android/chrome/browser.properties
@@ -12,6 +12,7 @@ alertAddonsInstalledNoRestart.message=Ukufakelwa kugqityiwe
 
 # LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ADD-ONS
 
 alertDownloadsStart2=Iqalisa ukukhuphela
 alertDownloadsDone2=Igqibile ukukhuphela
@@ -24,6 +25,7 @@ alertDownloadsResume=Buyela enkomeni
 alertDownloadsCancel=Rhoxisa
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
 # when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Ukhutshelo luyekisiwe kwiiseshoni zendwendwe
 
 alertFullScreenToast=Cinezela NGASEMVA ukushiya imo yesikrin esipheleleyo
 
@@ -122,17 +124,33 @@ contacts.ask=Ingaba imele ivumele %S ukuba ifikelele kwabo unoqhagamshelwano nab
 contacts.dontAskAgain=Ungabuzi kwakhona kule sayithi
 
 # Device Storage API
+deviceStorageMusic.allow=Vumela
+deviceStorageMusic.dontAllow=Ungayivumeli
+deviceStorageMusic.ask=Uyavumela i-%S ikwazi ukungena kumculo wakho?
 # LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Ungabuzi kwakhona ngale sayithi
 
+deviceStoragePictures.allow=Vumela
+deviceStoragePictures.dontAllow=Ungayivumeli
+deviceStoragePictures.ask=Uyavumela i-%S ikwazi ukungena kwimifanekiso yakho?
 # LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Ungabuzi kwakhona ngale sayithi
 
+deviceStorageSdcard.allow=Vumela
+deviceStorageSdcard.dontAllow=Ungayivumeli
+deviceStorageSdcard.ask=Vumela %S ukufumaneka kugcino lwangaphandle?
 # LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Ungabuzi kwakhona kule sayithi
 
+deviceStorageVideos.allow=Vumela
+deviceStorageVideos.dontAllow=Ungayivumeli
+deviceStorageVideos.ask=Vumela %S ukufumaneka kweevido zakho?
 # LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Ungabuzi kwakhona kule sayithi
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
@@ -195,6 +213,9 @@ selectionHelper.textCopied=Umbhalo ukhutshelwe kwiklipbhodi
 # Casting
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
+casting.sendToDevice=Thumela kwidivayisi\u0020
+casting.mirrorTab=Ithebhu efana nqwa
+casting.mirrorTabStop=Yeka okufana nqwa
 
 # Context menu
 contextmenu.openInNewTab=Vula iKhonkco kwiThebhu Entsha
@@ -230,6 +251,7 @@ contextmenu.saveAudio=Gcina okunesandi
 contextmenu.addToContacts=Yongeza kubantu oqhagamshelana nabo
 # LOCALIZATION NOTE (contextmenu.sendToDevice):
 # The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Thumela kwidivayisi
 
 contextmenu.copy=Kopa
 contextmenu.cut=Sika
@@ -366,3 +388,4 @@ feedHandler.subscribeWith=Rhuma nge
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
+nativeWindow.deprecated=%S iyaliwa. Nceda usebenzise %S endaweni yayo
