--- a/xh/mobile/overrides/passwordmgr.properties
+++ b/xh/mobile/overrides/passwordmgr.properties
@@ -4,22 +4,22 @@
 
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
-savePassword=Ufuna ukugcina ipasiwedi ye-"%1$S" kwi-%2$S?
+savePassword=Ufuna ukugcina iphasiwedi ye-"%1$S" kwi-%2$S?
 # String is the login's hostname
-savePasswordNoUser=Ufuna ukugcina ipasiwedi kwi-%S?
+savePasswordNoUser=Ufuna ukugcina iphasiwedi kwi-%S?
 saveButton=Gcina
 dontSaveButton=Musa ukuyigcina
 
 # String is the login's hostname
-updatePassword=Ufuna ukuhlaziya ipasiwedi egciniweyo ye-%S?
-updatePasswordNoUser=Ufuna ukugcina ipasiwedi egciniweyo yoku kungena?
+updatePassword=Ufuna ukuhlaziya iphasiwedi egciniweyo ye-%S?
+updatePasswordNoUser=Ufuna ukugcina iphasiwedi egciniweyo yoku kungena?
 updateButton=Hlaziya
 dontUpdateButton=Musa ukuyihlaziya
 
-userSelectText=Qinisekisa ukuba nguwuphi umsebenzisi omtshintshela ipasiwedi
-passwordChangeTitle=Qinisekisa Ukuguqulwa Kwegama Lokugqithisa
+userSelectText=Qinisekisa ukuba nguwuphi umsebenzisi omtshintshela iphasiwedi
+passwordChangeTitle=Qinisekisa Ukuguqulwa Kwegama Kwephasiwedi
 
 # Strings used by PromptService.js
-rememberPassword=Sebenzisa uMphathi wepasiwedi ukukhumbula le pasiwedi.
+rememberPassword=Sebenzisa uMphathi wephasiwedi ukukhumbula le pasiwedi.
 username=Igama lomsebenzisi
 password=Igama lokugqithisa
