[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -457,7 +457,7 @@ webapps.doNotUninstall.accesskey = P
 webapps.requestUninstall = Hoffech chi ddadosod "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=Mae %S nawr yn sgrin llawn.
+fullscreen.entered=Mae %S nawr yn y modd sgrin llawn.
 # LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.rememberDecision=Cofio'r penderfyniad am %S
 
